--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,4 +1,16 @@
 
+
+.search-container{
+    background-color: #333232;
+    padding: 22px 0 22px 0 ;
+    text-align: center;
+}
+
+.search-container input{
+    width: 75%;
+    height: 25px;
+}
+
 .shop-container{
     display: grid;
     grid-template-columns: 3fr 1fr;
